<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/background"
    android:orientation="horizontal"
    android:padding="30dip"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
	<LinearLayout
	    android:orientation="vertical"
	    android:layout_height="wrap_content"
	    android:layout_width="fill_parent"
	    android:layout_gravity="center">
		<TextView
		    android:layout_gravity="center"
		    android:layout_marginBottom="25dip"
		    android:textSize="24.5sp"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/main_title" />
	    <Button
	        android:id="@+id/goods1_button"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/goods1_label"/>
	    <Button
	        android:id="@+id/goods2_button"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/goods2_label"/>
	    <Button
	        android:id="@+id/about_button"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/about_label"/>
	    <Button
	        android:id="@+id/exit_button"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/exit_label"/>
	</LinearLayout>
</LinearLayout>